--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,7 +21,7 @@ jobs:
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
           ls
-          cd cd /home/ubuntu/django_deployment  
+          cd /home/ubuntu/django_deployment  
           git pull origin main
           docker-compose down
           docker-compose up --build -d
