--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-DEBUG=False
-SECRET_KEY=D-1sh-)z1yt=duaywr-q!5&gk#@(%s)d#8%y#+hpzhkus+j-n)3o
-DB_NAME=todo_db
-DB_USER=todo_user
-DB_PASSWORD=vishnu@123
-DB_HOST=db
+DB_NAME=development
+DB_USER=postgres
+DB_PASSWORD=TaraFirst2025
+DB_HOST=database-1.c3o2cwmsyxg5.ap-south-1.rds.amazonaws.com
 DB_PORT=5432
+
