--- a/.env
+++ b/.env
@@ -1,6 +1,19 @@
-DB_NAME=development
-DB_USER=postgres
-DB_PASSWORD=TaraFirst2025
-DB_HOST=database-1.c3o2cwmsyxg5.ap-south-1.rds.amazonaws.com
-DB_PORT=5432
+# This is the DATABASE name (must match POSTGRES_DB)
+POSTGRES_DB=todo_user_10
 
+# This is the username
+POSTGRES_USER=todo_user_10
+
+# This is the password
+POSTGRES_PASSWORD=vishnuPoiu
+
+# This is the host as seen by Django container
+POSTGRES_HOST=db
+
+# Optional but helpful
+POSTGRES_PORT=5432
+
+# Django-specific
+DEBUG=True
+SECRET_KEY=your-secret-key
+ALLOWED_HOSTS=127.0.0.1,localhost
