--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,36 @@
 
-
 services:
   web:
-    build: .
-    command: gunicorn todo_project.wsgi:application --bind 0.0.0.0:8000 
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: vishnu9/todo-app:${IMAGE_TAG:-latest}
     volumes:
       - .:/app
     ports:
       - "8000:8000"
+    depends_on:
+      db:
+        condition: service_healthy
     env_file:
       - .env
 
+  db:
+    image: postgres
+    restart: always
+    env_file:
+      - .env
+    environment:
+      POSTGRES_DB: todo_user_10
+      POSTGRES_USER: todo_user_10
+      POSTGRES_PASSWORD: vishnuPoiu
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U todo_user_10"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
 volumes:
-  postgres_data: 
+  postgres_data:
