--- a/appspec.yml
+++ b/appspec.yml
@@ -18,7 +18,7 @@ hooks:
   AfterInstall:
     - location: scripts/afterinstall.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
 
   ApplicationStart:
     - location: scripts/applicationstart.sh
