--- a/appspec.yml
+++ b/appspec.yml
@@ -3,8 +3,7 @@ os: linux
 files:
   - source: /
     destination: /home/ubuntu/django_deployment
-  - source: image_tag.txt
-    destination: /home/ubuntu/django_deployment
+
 
 hooks:
   BeforeInstall:
@@ -20,7 +19,7 @@ hooks:
   AfterInstall:
     - location: scripts/afterinstall.sh
       timeout: 300
-      runas: root
+      runas: ubuntu
 
   ApplicationStart:
     - location: scripts/applicationstart.sh
