--- a/appspec.yml
+++ b/appspec.yml
@@ -19,9 +19,9 @@ hooks:
   AfterInstall:
     - location: scripts/afterinstall.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
 
   ApplicationStart:
     - location: scripts/applicationstart.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
