Add deployment scriptss

--- a/appspec.yml
+++ b/appspec.yml
@@ -24,4 +24,4 @@ hooks:
   ApplicationStart:
     - location: scripts/applicationstart.sh
       timeout: 300
-      runas: root
+      runas: ubuntu
