--- a/appspec.yml
+++ b/appspec.yml
@@ -19,7 +19,7 @@ hooks:
   AfterInstall:
     - location: scripts/afterinstall.sh
       timeout: 300
-      runas: root
+      runas: ubuntu
 
   ApplicationStart:
     - location: scripts/applicationstart.sh
