--- a/appspec.yml
+++ b/appspec.yml
@@ -14,7 +14,7 @@ hooks:
   Install:
     - location: scripts/install.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
 
   AfterInstall:
     - location: scripts/afterinstall.sh
