--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,11 +21,11 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_DB: todo_user_10
-      POSTGRES_USER: todo_user_10
-      POSTGRES_PASSWORD: vishnuPoiu
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGTRS_PASSWORD}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U todo_user_10"]
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER}"]
       interval: 5s
       timeout: 5s
       retries: 5
